Updated Twitter scraping and cleaned up code

--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initial setup\n",
+    "- Libraries\n",
+    "- Splinter Browser config"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,8 +19,7 @@
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "from splinter import Browser\n",
-    "import time\n",
-    "import re"
+    "import time"
    ]
   },
   {
@@ -20,16 +28,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- urls for scraping ---\n",
-    "MarsNews_url = 'https://mars.nasa.gov/news/'\n",
-    "JPLimage_url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
-    "MarsWeather_url = 'https://twitter.com/marswxreport'\n",
-    "MarsFacts_url = 'https://space-facts.com/mars/'\n",
-    "MarsHemImage_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
-    "\n",
-    "# --- create a browser instance using splinter ---\n",
+    "# --- create a browser instance using splinter (FOR MAC) ---\n",
     "executable_path = {'executable_path': '/usr/local/bin/chromedriver'}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
+    "browser = Browser('chrome', **executable_path, headless=False)\n",
+    "time.sleep(1)\n",
+    "\n",
+    "# --- For Windows ---\n",
+    "# executable_path = {'executable_path': 'chromedriver.exe'}\n",
+    "# browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
@@ -43,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +63,9 @@
    ],
    "source": [
     "# --- visit the Mars News url ---\n",
+    "MarsNews_url = 'https://mars.nasa.gov/news/'\n",
     "browser.visit(MarsNews_url)\n",
-    "time.sleep(1)\n",
+    "time.sleep(2)\n",
     "\n",
     "# --- create HTML object ---\n",
     "html = browser.html\n",
@@ -88,13 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- visit the JPL Featured Space Image website ---\n",
+    "JPLimage_url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
     "browser.visit(JPLimage_url)\n",
-    "time.sleep(1)\n",
+    "time.sleep(2)\n",
     "\n",
     "# --- create HTML object ---\n",
     "html = browser.html\n",
@@ -105,15 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://photojournal.jpl.nasa.gov/jpeg/PIA18328.jpg\n",
-      "Dark Side of the Moon: Enceladus\n"
+      "https://photojournal.jpl.nasa.gov/jpeg/PIA07137.jpg\n",
+      "What's Old is New in the Large Magellanic Cloud\n"
      ]
     }
    ],
@@ -175,23 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- visit the Mars Weather twitter account ---\n",
+    "MarsWeather_url = 'https://twitter.com/marswxreport'\n",
     "browser.visit(MarsWeather_url)\n",
-    "time.sleep(1)\n",
+    "time.sleep(5)\n",
     "\n",
     "# --- create HTML object ---\n",
-    "#html = browser.html\n",
+    "html = browser.html\n",
     "\n",
     "# --- parse HTML with BeautifulSoup ---\n",
-    "#soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
-    "#pattern = re.compile(r\"sol\")\n",
-    "#sol = soup.find('span', text=pattern)\n",
-    "#sol"
+    "soup = BeautifulSoup(html, 'html.parser')\n"
    ]
   },
   {
@@ -202,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "'InSight sol 605 (2020-08-09) low -92.7ºC (-134.8ºF) high -18.4ºC (-1.1ºF)winds from the WNW at 8.8 m/s (19.7 mph) gusting to 22.5 m/s (50.4 mph)pressure at 7.90 hPa'"
+       "'InSight sol 606 (2020-08-09) low -94.1ºC (-137.4ºF) high -18.7ºC (-1.6ºF)winds from the WNW at 8.0 m/s (17.8 mph) gusting to 23.9 m/s (53.4 mph)pressure at 7.90 hPa'"
       ]
      },
      "execution_count": 7,
@@ -211,18 +216,14 @@
     }
    ],
    "source": [
-    "# --- get a list of all <span> tags ---\n",
-    "all_spans = browser.find_by_css('span')\n",
-    "\n",
-    "# --- checking to find index for the first tweet (stored in <span> tag) - it is at index 48 ---\n",
-    "#for span in range(len(all_spans)):\n",
-    "#    print(span, all_spans[span].value)\n",
-    "\n",
-    "# --- save the latest tweet (at index 48 of the span element list) in a variable ---\n",
-    "latest_tweet = all_spans[48].value\n",
+    "# --- save the latest tweet in a variable (found in the text of the first element <span> \n",
+    "# under the <div> tag with lang=\"en\" ---\n",
+    "tweet = soup.find_all('div', lang='en')[0].text\n",
     "\n",
     "# --- clean up the tweet (remove newline) ---\n",
-    "latest_tweet.replace('\\n', '')"
+    "latest_tweet = tweet.replace('\\n', '')\n",
+    "        \n",
+    "latest_tweet"
    ]
   },
   {
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -327,15 +328,16 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# --- visit the Mars Facts website ---\n",
+    "MarsFacts_url = 'https://space-facts.com/mars/'\n",
     "browser.visit(MarsFacts_url)\n",
-    "time.sleep(1)\n",
+    "time.sleep(2)\n",
     "\n",
     "# --- create HTML object ---\n",
     "html = browser.html\n",
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- visit the Mars Hemisphere website ---\n",
-    "\n",
+    "MarsHemImage_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
     "browser.visit(MarsHemImage_url)\n",
-    "time.sleep(1)\n",
+    "time.sleep(2)\n",
     "\n",
     "# --- create HTML object ---\n",
     "html = browser.html\n",
@@ -388,37 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg\n"
-     ]
-    }
-   ],
-   "source": [
-    "browser.find_by_css(\"a.product-item h3\")[0].click()\n",
-    "time.sleep(1)\n",
-    "\n",
-    "# --- create a beautiful soup object with the image detail page's html ---\n",
-    "img_detail_html = browser.html\n",
-    "imagesoup = BeautifulSoup(img_detail_html, 'html.parser')\n",
-    "    \n",
-    "# --- retrieve the full-res image url and save into a variable ---\n",
-    "base_url = 'https://astrogeology.usgs.gov'\n",
-    "hem_url = imagesoup.find('img', class_=\"wide-image\")['src']\n",
-    "img_url = base_url + hem_url\n",
-    "print(img_url)\n",
-    "\n",
-    "browser.back()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +406,7 @@
        "  'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
