Cleaned up jupyter notebook

--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -56,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NASA's MAVEN Observes Martian Night Sky Pulsing in Ultraviolet Light\n",
-      "Vast areas of the Martian night sky pulse in ultraviolet light, according to images from NASA’s MAVEN spacecraft. The results are being used to illuminate complex circulation patterns in the Martian atmosphere.\n"
+      "Celebrate Mars Reconnaissance Orbiter's Views From Above\n",
+      "Marking its 15th anniversary since launch, one of the oldest spacecraft at the Red Planet has provided glimpses of dust devils, avalanches, and more.\n"
      ]
     }
    ],
@@ -120,8 +120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://photojournal.jpl.nasa.gov/jpeg/PIA07137.jpg\n",
-      "What's Old is New in the Large Magellanic Cloud\n"
+      "https://photojournal.jpl.nasa.gov/jpeg/PIA19674.jpg\n",
+      "Gale Crater's Surface Materials\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "'InSight sol 606 (2020-08-09) low -94.1ºC (-137.4ºF) high -18.7ºC (-1.6ºF)winds from the WNW at 8.0 m/s (17.8 mph) gusting to 23.9 m/s (53.4 mph)pressure at 7.90 hPa'"
+       "'InSight sol 607 (2020-08-11) low -93.1ºC (-135.6ºF) high -18.9ºC (-2.1ºF)winds from the WNW at 8.2 m/s (18.4 mph) gusting to 21.4 m/s (47.8 mph)pressure at 7.90 hPa'"
       ]
      },
      "execution_count": 7,
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "  'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,9 +448,19 @@
     "    \n",
     "    # --- go back to the main page ---\n",
     "    browser.back()\n",
+    "    \n",
+    "# --- close the browser session ---    \n",
+    "browser.quit()\n",
     "\n",
     "hemisphere_image_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
